// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating Snapshots with Fela should always use a clean setup 1`] = `
".a {
  background-color: blue;
}
.b {
  color: red;
}


<div data-reactroot className=a b />;
"
`;

exports[`Creating Snapshots with Fela should always use a clean setup 2`] = `
".a {
  background-color: green;
}
.b {
  color: red;
}


<div data-reactroot className=a b />;
"
`;

exports[`Creating Snapshots with Fela should inject the theme 1`] = `
".a {
  background-color: blue;
}
.b {
  color: red;
}


<div data-reactroot className=a b />;
"
`;

exports[`Creating Snapshots with Fela should return formatted html and css 1`] = `
".d {
  display: flex;
}
.e {
  flex: 1 0 auto;
}
.a:hover {
  color: blue;
}
@media (min-width: 300px) {
  .c {
    background-color: black;
  }
  .b:hover {
    color: green;
  }
}


<div data-reactroot className=a b c d e />;
"
`;

exports[`Creating Snapshots with Fela should use a custom renderer 1`] = `
".a {
  font-size: 12px;
}
.b {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}


<div data-reactroot className=a b />;
"
`;
